login page created

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,9 +47,11 @@
         <div class="spotify-poster-section">
             <div class="small_heading">
                 <h4>Already have an Account?</h4>
-                <button class="buttonLogin">Login</button>
+                <button class="buttonLogin"><a href="/login">Login</a></button>
             </div> 
         </div>
      </div>
+     <script src="../javascripts/script.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/gsap@3.11/dist/gsap.min.js"></script>
   </body>
 </html>
