--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,800;1,900&display=swap');
 
 *{
   margin: 0;
@@ -168,5 +168,122 @@ html,body{
   font-weight: 700;
   color: #fff;
 }
+.buttonLogin>a{
+  text-decoration: none;
+  color: white;
+}
 /*------------------------------------------LOGIN SECTION-------------------------------------------------------*/
-
+.Login-Container{
+  display: flex;
+  width: 100%;
+  min-height: 100vh;
+  background-color: #444;
+}
+.Login-Section{
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  width: 50%;
+  min-height: 100vh;
+  background-color:#121212;
+}
+.Login_Logo{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  padding: 0vw 1vw;
+  font-size: 2vw;
+  gap: 10px;
+  color: white;
+}
+.Login-box{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  min-height: 80vh;
+}
+.Login_heading{
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  width: 100%;
+  padding: 1vw 1vw;
+  font-size: 2vw;
+  font-weight: 700;
+  color: #fff;
+  margin-bottom: 1vw;
+}
+.Login_heading>h2{
+  width: 100%;
+  padding: 0.5vw 0.5vw;
+}
+.Login_heading>p{
+  font-size: 1vw;
+  font-weight: 600;
+  padding: 0.5vw 1vw;
+  width: 100%;
+}
+.Login_heading>p>span>a{
+  text-decoration: none;
+  color: #1ccc5b;
+}
+.Login_form-section{
+  width: 100%;
+  padding: 1vw 1vw;
+}
+.Login_form-section_form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 30vh;
+}
+.Login_form-Input_section{
+ display: flex;
+ flex-direction: column;
+  width: 100%;
+  padding:1vw 0.5vw;
+}
+.Login_form-Input_section>#input{
+  width: 70%;
+  padding: 1.5vw 0.5vw;
+  margin-bottom: 1vw;
+  background-color: #444;
+  color: white;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.Login_form-Input_section>#input::placeholder{
+  color: white;
+  padding-left: 0.5vw;
+}
+.Loginbutton{
+  width: 100%;
+  padding: 0.5vw 0.5vw;
+}
+.Loginbutton>button{
+  padding: 1vw 3vw;
+  background-color: #1ccc5b;
+  color: #fff;
+  width: 70%;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.Login_Poster{
+  width: 50%;
+  min-height: 100vh;
+  background-color: #444;
+  background-image: url("../images/inline_image_preview-removebg-preview.png");
+  background-size: cover;
+  background-position: center;
+  background-color: #1ccc5b;
+}
