login functionality complete

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>REGISTER</title>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
@@ -13,12 +13,12 @@
                <h1 class="title">Spotify</h1>
             </div>
             <div class="spotify-form">
-                <form action="" class="form-section" method="post">
+                <form action="/register" class="form-section" method="post">
                   <div class="nested-form">
                     <input type="text" name="username" id="username" placeholder="Username">
                     <input type="text" name="name" id="name" placeholder=" Full Name">
                     <input type="email" name="email" id="email" placeholder="Email">
-                    <input type="text" name="password" id="password" placeholder="Password">
+                    <input type="password" name="password" id="password" placeholder="Password">
                   </div>
                   <div class="gender"> 
                       <select id="genderSelect" name="gender">
