--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,7 +13,7 @@
         <div class="Login-Section">
           <div class="Login-box">
                <div class="Login_Logo"><span><i class="ri-spotify-fill"></i></span><h2>Spotify</h2></div>
-              <div class="Login_heading"><h2>WELCOME BACK</h2><p>Don't have a account <span><a href="">sign up</a></span></p></div>
+              <div class="Login_heading"><h2>WELCOME BACK</h2><p>Don't have a account <span><a href="/register">sign up</a></span></p></div>
               <div class="Login_form-section">
                   <form action="" method="post" class="Login_form-section_form">
                       <div class="Login_form-Input_section">
