--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,10 +6,20 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Raleway', sans-serif;
+  
 }
 html,body{
   width: 100%;
   height: 100%;
+}
+body::-webkit-scrollbar {
+  width: 0.5em;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #171717;
+}
+body::-webkit-scrollbar-thumb {
+  background-color:#6e6b6b;
+  outline: 1px solid slategrey;
 }
 #main-box{
   display: flex;
@@ -592,11 +602,7 @@ label{
   height: 15vh;
   /* border: 2px solid blue; */
 }
-.progress{
-  width: 100%;
-  height: 3px;
-  background-color: #1ccc5b;
-}
+
 .playButton,.playForword,.playBackward{
   display: flex;
   justify-content: center;
@@ -619,5 +625,62 @@ label{
   align-items: center;
   gap: 30px;
   width: 100%;
-  padding: 0.5vw 0.5vw;
+  height: 50%;
+  /* background-color: red; */
+  padding-top: 0.5vw;
+}
+
+.audio_controls_section{
+  width: 60%;
+  height: 100%;
+  /* background-color: black; */
+}
+.progress_container{
+  width: 100%;
+  height: 50%;
+  /* background-color: #d0c9c9; */
+}
+.progress_meter{
+  width: 100%;
+  padding: 0.2vw 0.2vw;
+  /* background-color: #fff; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
+}
+.progress_div{
+  position: relative;
+  width: 100%;
+  height: 5px;
+  background-color: #444;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    margin-top: 10px;
+    transition: all 1s linear;
+    appearance: none;
+    cursor: pointer;
+    border-radius: 40px;
+}
+.progress{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  background-color:#1ccc5b;
+  transition: all 1s linear;
+  appearance: none;
+  cursor: pointer;
+  border-radius: 40px;
+}
+.audio_other_controls{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20%;
+  height: 100%;
+  background-color:#444;
+  color: white;
 }
